# aoc2023

./: Cargo.toml
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs  part1.rs  part2.rs
day8/: Cargo.toml
day8/src/: lib.rs  main.rs
day9/: Cargo.toml
day9/src/: lib.rs  main.rs
templates/day/: Cargo.toml
templates/day/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
