[workspace]
members = ["day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9"]
default-members = ["day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9"]

[workspace.package]
edition = "2021"

[package]
version = "0.1.0"
name = "aoc2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
